--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ highlighter: rouge
 # Themes are encouraged to use these universal variables
 # so be sure to set them if your theme uses them.
 #
-title : Benjamin Harvey
+title : Student Name
 author :
   name : Benjamin Harvey
   email : bsharve@gmail.com
