--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ highlighter: rouge
 #
 title : Student Name
 author :
-  name : Benjamin Harvey
+  name : Student Name
   email : bsharve@gmail.com
   github : bsharvey
   twitter : bsharvey
